build.gradle:
* Changed to new gradle v7 syntax.
* Removed the maven publishing as unnecessary for me
* Necessary Java modularity changes

gradle-wrapper.properties:
* Uses now gradle v7.6.2

MorUtilTestSpec.groovy:
* Test fixed as of error message change

Java Sources:
* javax.xml.bind.DatatypeConverter -> jakarta.xml.bind.DatatypeConverter