@@ -1,33 +1,36 @@
-apply plugin: 'java'
-apply plugin: 'groovy'
-apply plugin: 'idea'
-apply plugin: 'eclipse'
-apply plugin: 'maven'
-apply plugin: 'signing'
-apply plugin: 'groovy'
+plugins {
+    id 'java'
+    id 'groovy'
+    id 'idea'
+    id 'eclipse'
+    id 'java-library'
+    id 'maven-publish'
+    id 'signing'
+}
 
-group = "com.toastcoders"
-archivesBaseName = "yavijava"
-version = '6.0.05'
-ext.isReleaseVersion = !version.endsWith("SNAPSHOT")
-targetCompatibility = 1.6
-sourceCompatibility = 1.6
+targetCompatibility = 11
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    maven {
+        url = uri("https://repo1.maven.org/maven2")
+    }
 }
 
 dependencies {
-    compile 'org.apache.directory.studio:org.dom4j.dom4j:1.6.1'
-    compile 'log4j:log4j:1.2.17'
-    compile 'org.apache.httpcomponents:httpclient:4.3.5'
-    compile 'org.projectlombok:lombok:1.16.6'
-    testCompile 'javax.servlet:javax.servlet-api:3.1.0'
-    testCompile 'junit:junit-dep:4.11'
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
-    testCompile 'cglib:cglib-nodep:3.1'
-    testCompile 'org.objenesis:objenesis:2.1'
+    implementation 'org.apache.directory.studio:org.dom4j.dom4j:1.6.1'
+    implementation 'log4j:log4j:1.2.17'
+    implementation 'org.apache.httpcomponents:httpclient:4.3.5'
+    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.1'
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'    
+    testImplementation 'javax.servlet:javax.servlet-api:3.1.0'
+    testImplementation 'junit:junit-dep:4.11'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.spockframework:spock-core:0.7-groovy-2.0'
+    testImplementation 'cglib:cglib-nodep:3.1'
+    testImplementation 'org.objenesis:objenesis:2.1'
 }
 
 sourceSets {
@@ -63,7 +66,7 @@ configurations {
 
 task intTest(type:Test){
     description = "Run integration tests (located in src/intTest/...)."
-    testClassesDir = project.sourceSets.intTest.output.classesDir
+    testClassesDirs = project.sourceSets.intTest.compileClasspath
     classpath = project.sourceSets.intTest.runtimeClasspath
 }
 
@@ -87,55 +90,54 @@ artifacts {
     archives javadocJar, sourcesJar
 }
 
-signing {
-    required { isReleaseVersion && gradle.taskGraph.hasTask("uploadArchives") }
-    sign configurations.archives
-}
-
-def ossrhUsername = hasProperty('ossrhUsername') ? ossrhUsername : ''
-def ossrhPassword = hasProperty('ossrhPassword') ? ossrhPassword : ''
-
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-
-            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
-            }
-
-            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
-            }
-
-            pom.project {
-                name 'yavijava'
-                packaging 'jar'
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            artifactId = 'yavijava'
+            groupId = 'com.toastcoders'
+            version = '6.0.05-jakarta'
+            from components.java
+            pom {
+                name = 'yavijava'
                 // optionally artifactId can be defined here
-                description 'Java library for VMware vSphere'
-                url 'https://github.com/yavijava/yavijava'
+                description = 'Java library for VMware vSphere'
+                url = 'https://github.com/mspies00/yavijava'
 
                 scm {
-                    connection 'scm:git:https://github.com/yavijava/yavijava.git'
-                    developerConnection 'scm:git:https://github.com/yavijava/yavijava.git'
-                    url 'https://github.com/yavijava/yavijava'
+                    connection = 'scm:git:https://github.com/mspies00/yavijava.git'
+                    developerConnection = 'scm:git:https://github.com/mspies00/yavijava.git'
+                    url = 'https://github.com/mspies00/yavijava'
                 }
 
                 licenses {
                     license {
-                        name 'BSD'
-                        url 'http://opensource.org/licenses/BSD-3-Clause'
+                        name = 'BSD'
+                        url = 'http://opensource.org/licenses/BSD-3-Clause'
                     }
                 }
 
                 developers {
                     developer {
-                        id 'michaelrice'
-                        name 'Michael Rice'
-                        email 'michael@michaelrice.org'
+                        id = 'michaelrice'
+                        name = 'Michael Rice'
+                        email = 'michael@michaelrice.org'
                     }
                 }
             }
         }
     }
 }
+
+signing {
+    sign publishing.publications.mavenJava
+}
+
+tasks.named('test', Test) {
+    jvmArgs(
+        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.net=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.util=ALL-UNNAMED'
+    )
+}
+
